feat(repo): update nofication, profileMenu in fe-be
